--- a/todo/package.json
+++ b/todo/package.json
@@ -2,7 +2,6 @@
   "name": "todo",
   "version": "1.0.0",
   "description": "Simple TO-Do List",
-  "main": "index.js",
   "scripts": {
     "dev": "webpack -d --watch",
     "build": "webpack -p",
@@ -25,8 +24,10 @@
     "axios": "^0.17.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "react-router-dom": "^4.2.2",
     "serve": "^6.4.1",
     "webpack": "^3.8.1"
   },
