--- a/todo/package.json
+++ b/todo/package.json
@@ -27,12 +27,19 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
     "react-router-dom": "^4.2.2",
     "serve": "^6.4.1",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
     "webpack": "^3.8.1"
   },
   "dependencies": {
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "bootstrap": "^4.0.0-beta.2",
+    "react": "^16.1.0",
+    "react-bootstrap": "^0.31.5",
+    "react-dom": "^16.1.0",
+    "reactstrap": "^5.0.0-alpha.3"
   }
 }
